# frontline

./: .gitignore  .replit  README.md  planning.md  pyproject.toml  replit.md  system_design.md
backend/: requirements.txt  run.py
backend/app/: database.py  decision_engine.py  main.py  redis_client.py
backend/app/api/: chat.py  dashboard.py  false_positive.py  simulator.py
backend/app/core/: config.py
backend/app/guardrails/: ai_classifier.py  behavior.py  cost_protection.py  prompt_rules.py  rate_limit.py  validation.py
backend/app/models/: __init__.py  false_positive_report.py  layer_result.py  request_log.py
backend/app/schemas/: chat.py  dashboard.py  false_positive.py  simulator.py
backend/app/services/: ai_agent.py  cost_estimator.py  pipeline.py  redaction.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/simulator/: page.tsx
frontend/components/: Navbar.tsx
frontend/lib/: api.ts
